--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "repository": "",
   "scripts": {
-    "start": "node_modules/.bin/brunch watch --server"
+    "start": "node_modules/.bin/brunch watch --server",
+    "test": "cd test; ../node_modules/.bin/phantom-jasmine test"
   },
   "dependencies": {
   },
@@ -11,6 +12,7 @@
     "brunch": "*",
     "javascript-brunch": "~1.6.0",
     "css-brunch": "~1.6.0",
-    "coffee-script-brunch": "~1.7.2"
+    "coffee-script-brunch": "~1.7.2",
+    "phantom-jasmine": "*"
   }
 }
