Add start of view system. Add fabric.js
View system is currently controller by a controller that can
create the components when requested by the view. The components
themselves own their own views.

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "public/app.js",
   "dependencies": {
-     "circuit-solver": "1.0.0"
+     "circuit-solver": "1.0.0",
+     "fabric": "1.4.5"
     }
 }
